# wor_world_bp_sim

./: README.md
arm/: CMakeLists.txt  package.xml
cup/: CMakeLists.txt  package.xml
cup/include/cup/: cup_node.h
cup/resource/: cup.stl
cup/src/: cup_node.cpp
diagrams/: export.sh
diagrams/class/: class_dia_arm_node.puml  class_dia_cup_node.puml
diagrams/plantuml/: class_dia_cup_node.puml  seq_dia_arm_node.puml
diagrams/sequence/: seq_dia_arm_node.puml  seq_dia_simulation.puml
